all episodes viewmodel tests